Add LayoutAnchor Add support Carthage Add support CocoaPods

--- a/.jazzy.yml
+++ b/.jazzy.yml
@@ -1,5 +1,5 @@
 author: Vinicius França
-author_url: https://twitter.com/rahulkatariya91
+author_url: 
 github_url: https://github.com/viniciusfranca/LayoutAnchor
 root_url: https://viniciusfranca.github.io/LayoutAnchor/
 module: LayoutAnchor
